radarr/radarr-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: linuxserver/radarr:108
        name: radarr
        ports:
          - containerPort: 7878
        volumeMounts:
          - mountPath: /config
            name: data
            subPath: config
          - mountPath: /downloads
            name: data
            subPath: downloads
          - mountPath: /movies
            name: plex
            subPath: movies
          - mountPath: /dls
            name: sabnzbddls
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: radarrclaim
      - name: sabnzbddls
        persistentVolumeClaim:
          claimName: sabclaim
      - name: plex
        persistentVolumeClaim:
          claimName: plexserverclaim
