radarr/radarr-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
