radarr/radarr-ingres.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: radarr.wastedbits.org
    http:
      paths:
      - backend:
          serviceName: radarr
          servicePort: 7878
